# argentina_income_analyzer

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  data-update.yml  data.yml  python.yml
data/: checksums.txt
docs/: metodologia.md
pipeline/: __init__.py  artifact_check.py  build.py  config.py  fetch.py  load.py  validate.py  verify.py  watch.py  weighted.py
tests/: conftest.py  test_artifact_check.py  test_build.py  test_config.py  test_fetch.py  test_load.py  test_validate.py  test_verify.py  test_watch.py  test_weighted.py
web/: index.html  package-lock.json  package.json
web/public/: percentiles.v1.json
web/src/: charts.ts  format.ts  main.ts  stats.ts  styles.css  types.ts  usd.ts
web/test/: charts.test.ts  fixture.ts  format.test.ts  main.test.ts  setup.ts  stats.test.ts  usd.test.ts
